fixed gulp dev error and added dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: black;
+    color: white;
+  }
+}
+
 #whiteRiceRecipe {
   font-size: 17px;
   left: 10px;
